# IndiaPincodeFinder

./: COPYRIGHT  LICENSE  NOTICE  README.md  pincode.json
api/: README.md  package.json  pnpm-lock.yaml
api/app/: layout.tsx  page.tsx
api/app/api/pincode/: route.ts
api/app/components/: PincodeForm.tsx
api/public/: sitemap.xml
javascript/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
javascript/.cache/: cache1
javascript/data/: pincode.json
javascript/src/: index.ts
javascript/test/: edge_cases.mjs  interactive.js  test.js
python/: .gitignore  README.md  interactive_test.py  project.toml  pyproject.toml  test_edge_cases.py  test_package.py
python/cache_directory/: cache.db
python/indiapincodefinder/: temp.py
python/src/indiapincodefinder/: __init__.py  main.py  utils.py
python/src/indiapincodefinder.egg-info/: PKG-INFO  requires.txt
python/src/indiapincodefinder/data/: pincode.json
