[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indiapincodefinder"
version = "3.0.0"
authors = [
  { name="Akshat Kotpalliwar", email="akshatkot@gmail.com" },
  { name="Aniket Dhumal", email="anikethd1410@gmail.com" }
]
description = "IndiaPincodeFinder is a Python module that helps you find detailed Indian address information by using a valid 6-digit PIN code. It's ideal for use in logistics, address validation, fintech onboarding (KYC), e-commerce, and mapping services."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools>=7.0.1"
]
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/IntegerAlex/IndiaPincodeFinder"
Issues = "https://github.com/IntegerAlex/IndiaPincodeFinder/issues"

[tool.setuptools.package-data]
indiapincodefinder = ["data/pincode.json"]
